# ems_backend

./: Cargo.toml
src/: .employee.rs.swp  auth.rs  db.rs  employee.rs  error.rs  main.rs  state.rs
src/routes/: mod.rs
src/routes/attendance/: data_structures.rs  functions.rs  mod.rs
src/routes/auth/: data_structures.rs  functions.rs  mod.rs
src/routes/designation/: data_structures.rs  functions.rs  mod.rs
src/routes/employee/: data_structures.rs  functions.rs  mod.rs
