[package]
name = "ems_backend"
version = "0.1.0"
authors = ["Emmanuel Antony <emmanuelantony2000@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.1"
anyhow = "1.0.38"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.122", features = ["derive"] }
tokio-postgres = { version = "0.7.0", features = ["with-chrono-0_4", "with-uuid-0_8"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
